--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <img src="image/p.png" alt="Profile Image">
         </div>
         <div class="home-content">
-            <h3>Hello, Myself</h3>
+            <h3>Hello, Everyone</h3>
             <h1>Purna Bahadur Khatri</h1>
+            
             <h3>And I'm a <span class="purna"></span></h3>
             <p>Front-End Developer & Graphic Designer | 2+ Years Experience in Web Development, UI/UX Design | Skilled in HTML, CSS, JavaScript, and Adobe Tools | Passionate About Innovation & Teaching"</p>
             <div class="social-media">
