--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfc_T3k1yk93EWVqHQ1WD8lQc6zL1-2Bhszyb_GHxz02-_gSQ/viewform?usp=preview " target="_blank" class="btn">Inquiry Now <i class='bx bx-right-arrow-alt'></i></a>
         </div>
         <div class="about-img">
-            <img src="image/pp.jpg" alt="">
+            <img src="D:\portfolio\image\icon.jpg" alt="">
         </div>
     </section>
 
